<resources>
    <string name="app_name">Death Timer Countdown</string>

    <string name="app_name_caps">DEATH TIMER COUNTDOWN</string>
    <string name="loading">LOADING</string>
    <string name="priv_policy">
        <u>Privacy policy</u>
    </string>
    <string name="priv_policy_link">
        http://docs.google.com/document/d/1Y2RA9KgNXLX5hlPLVqIXtKejVTzXl-h-KfPEV5P41YE/edit?usp=sharing
    </string>
    <string name="ask_learn_date">Wanna know the date?</string>
    <string name="save">Save</string>
    <string name="go">Go</string>
    <string name="enter_bday">Enter your birthday</string>
    <string name="my_bday">I was born on</string>
    <string name="my_dday">Choose date</string>

    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="enter_data">Enter data</string>
    <string name="i_smoke">I smoke</string>
    <string name="i_drink">I drink</string>

    <string name="you_know_1">Perhaps, you know it all already?</string>
    <string name="you_know_2">Do you want to enter your death date?</string>
    <string name="enter_death_date">Enter your death date</string>

    <string name="left">Time Left</string>
    <string name="days_left">24709 days</string>
    <string name="hms_left">05:55:43</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="years">years</string>

    <string name="settings">Settings</string>
    <string name="get_date_auto">Calculate date automatically</string>
    <string name="reset_date">Reset date</string>
    <string name="are_you_sure">Are you sure you want to drop current death date?</string>

    <string-array name="drink_habit">
        <item>Once a month</item>
        <item>Thrice a month</item>
        <item>Ten times a month</item>
        <item>More than ten times a month</item>
    </string-array>

    <string name="notification">Did you see how much you have left?</string>

    <string name="your_dead">YOUR DEAD</string>
</resources>