<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TimeLeftActivity">

    <include
        android:layout_marginTop="@dimen/nav_button_margin_top"
        layout="@layout/nav_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:text="@string/left"
        style="@style/textview_style"
        android:layout_marginTop="@dimen/just_under_lamp_margin_top"
        android:textSize="@dimen/learn_date_text_size" />

    <TextView
        android:id="@+id/daysLeftTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/days_left"
        android:textAlignment="center"
        android:textSize="@dimen/learn_date_text_size" />

    <TextView
        android:id="@+id/timeLeftTextView"
        android:layout_marginTop="@dimen/nav_button_margin_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview_style"
        android:text="@string/hms_left" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/time_left_next_button_margin_top"
        style="@style/button_style"
        android:onClick="onClick"
        android:text="@string/reset_date" />

</LinearLayout>