<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnterDeathDayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_button_layout_height"
        style="@style/nav_buttons_layout_style"
        android:orientation="horizontal" >
        <ImageButton
            android:layout_marginStart="@dimen/nav_button_margin_start"
            android:id="@+id/backButton"
            android:layout_gravity="start"
            style="@style/nav_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ico_back" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_gravity="end"
            style="@style/nav_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/nav_button_margin_start"
            app:srcCompat="@drawable/ico_settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        style="@style/textview_style"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/just_under_lamp_margin_top"
        android:text="@string/enter_death_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        style="@style/edittext_style"
        android:textColorHint="@color/white"
        app:errorTextColor="@color/design_default_color_error"
        android:hint="@string/my_dday"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/editText"
            style="@style/edittext_style"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="none"
            android:focusable="false"
            android:background="@drawable/spinner" />
    </com.google.android.material.textfield.TextInputLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:theme="@style/date_picker_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:minDate="01/01/1900" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        style="@style/button_style"
        android:onClick="onClick"
        android:text="@string/next" />

</LinearLayout>